fixing some bugs and adapting some changes by errorProne; adding a template for callBuilder