@@ -81,7 +81,7 @@ public class EquilTestSetUp {
 
 		pcs.setMarginalUtilityOfMoney(0.0789942);
 		pcs.getModes().get(TransportMode.car).setMarginalUtilityOfTraveling(0.0);
-		pcs.getModes().get(TransportMode.car).setMonetaryDistanceRate(new Double("-3.0E-4"));
+		pcs.getModes().get(TransportMode.car).setMonetaryDistanceRate( Double.valueOf("-3.0E-4"));
 		pcs.setLateArrival_utils_hr(0.0);
 		pcs.setPerforming_utils_hr(0.96);
 		
